cree los estilos del home__main

--- a/css/style.css
+++ b/css/style.css
@@ -23,14 +23,26 @@ li{
 a{
     text-decoration: none;
 }
+p{
+    color: white;
+}
+.body__home{
+    background-image: url("/asset/home/background-home-desktop.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    height: 100vh;
+    overflow: hidden;
+}
 .header__nav-border{
-    width: 50%;
+    width: 60%;
     position: absolute;
     top: calc(50%);
     height: 1px;
     background-color: var(--Secundary-color);
     z-index: 2;
-    left: calc(-45%);
+    left: calc(-50%);
 }
 header{
     display: flex;
@@ -48,7 +60,7 @@ header .header__nav{
     order: 3;
     width: 60%;
     background-color: var(--prymari-color);
-    opacity: 0.3;
+    opacity: 0.5;
     display: grid;
     place-items: center;
     z-index: 2;
@@ -71,4 +83,62 @@ header .header__nav{
 .header__nav-items li a b{
     margin-right: 5px;
     color: white;
+}
+
+/* Main for the home */
+
+.main__home {
+    width: 100%;
+    height: 100vh;
+}
+.main__home-content{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 80%;
+    justify-content: center;
+    margin: 0 auto;
+    height: 100vh;
+}
+.main__home-content__left{
+    grid-column: 1 / 2;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.main__home-content__left p:first-child{
+    font-size: large;
+    color: var(--Secundary-color);
+    margin-bottom: 30px;
+}
+.main__home-content__left p:nth-child(2){
+    font-size: 9rem;
+    font-weight: 300;
+    color: var(--Secundary-color); 
+    margin-bottom: 30px;
+}
+.main__home-content__left p:nth-child(3){
+    font-size: var(--Medium-cont) ;
+    font-weight: 300;
+    color: var(--Secundary-color);
+    line-height: 25px;
+}
+.main__home-content__right{
+    grid-column: 2 / 3;
+    display: grid;
+    align-content: center;
+    justify-content: end;
+}
+.main__home-content__right div{
+    width: 200px;
+    height: 200px;
+    background-color: white;
+    border-radius: 50%;
+    display: grid;
+    place-content: center;
+}
+.main__home-content__right div p {
+
+    color: var(--Secundary-color);
+    font-size: var(--Bigger-font);
+    font-weight: 300;
 }
