HTML basico del destination moon

--- a/css/style.css
+++ b/css/style.css
@@ -143,3 +143,6 @@ header .header__nav{
     font-size: var(--Bigger-font);
     font-weight: 300;
 }
+
+/* Here start the Moon destination home */
+
