--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ html{
     --Medium-cont: 14px;
     --Large-font:16px;
     --Bigger-font:20px;
+    --title--font: 2.8rem;
 }
 
 li{
@@ -146,3 +147,114 @@ header .header__nav{
 
 /* Here start the Moon destination home */
 
+.body__destination{
+    background-image: url("/asset/destination/background-destination-desktop.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+}
+.main__destination{
+    width: 100%;
+    height: 100vh;
+    justify-self: center;
+    display: grid;
+    
+    grid-template-columns: repeat(2, 1fr);
+}
+.destination__left{
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-left: 20px;
+}
+.destination__right{
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+
+    display: flex;
+    flex-direction: column;
+}
+.destination__left-title{
+    font-size: var(--title--font);
+    color: var(--Font-color);
+    margin-top: 50px;
+    font-weight: 300;
+}
+.destination__left-title b{
+    color: var(--Secundary-color);
+    margin-right: 10px;
+}
+.destination__left img{
+    width: 350px;
+    height: 350px;
+    margin-top: 70px;
+    align-self: flex-end;
+    margin-right: 180px;
+}
+.destination__right-container{
+    width: 70%;
+    margin: 70px 0 0 70px;
+    /* border: 2px solid green; */
+}
+.destination__right-container__nav{
+    display: flex;
+}
+.destination__right-container__nav li{
+    margin-right: 30px;
+}
+.destination__right-container__nav li a{
+    color: var(--Font-color);
+    font-size: var(--Large-font);
+}
+.destination__right-container__title{
+    font-size: 10rem;
+    color: var(--Font-color);
+    margin-top: 30px;
+    font-weight: 500;
+    margin-left: 10px;
+}
+.destination__right-container__description{
+    margin: 15px 0 0 10px;
+    color: #D0D6F9;
+    font-size: 1.8rem;
+    line-height: 30px;
+}
+.destination__right-container__data{
+    width: 100%;
+    margin: 50px 0 0 10px;
+    border-top: 1px solid #D0D6F9;
+    padding-top: 20px;
+    display: flex;
+}
+.destination__right-container__data .left{
+    margin-right: 80px;
+}
+.destination__right-container__data .left p:first-child{
+    color: #D0D6F9;
+    font-size: var(--Small-font);
+    margin-bottom: 5px;
+}
+.destination__right-container__data .left p:last-child{
+    color: var(--Font-color);
+    font-size: var(--title--font);
+    font-weight: 500;
+}
+.destination__right-container__data .right p:first-child{
+    color: #D0D6F9;
+    font-size: var(--Small-font);
+    margin-bottom: 5px;
+}
+.destination__right-container__data .right p:last-child{
+    color: var(--Font-color);
+    font-size: var(--title--font);
+    font-weight: 500;
+}
