--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,8 @@ header{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 40px;
-    height: 60px;
+    padding-top: 40px;
+    height: 15vh;
 }
 header img{
     margin-left: 50px;
@@ -266,25 +266,32 @@ header .header__nav{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    
+
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
 .main__crew{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
+    display: flex;
+    top: 0;
     width: 100%;
+    height: 85vh;
 }
 .main__crew-left{
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
+   width: 50%;
+   order: 1;
 
 }
 .main__crew-right{
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
+   width: 50%;
+   order: 2;
 }
 .main__crew-right img{
-    margin-top: 0px;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .main__crew-left{
