--- a/css/movile.css
+++ b/css/movile.css
@@ -2,22 +2,23 @@
     background-image: url("/asset/home/background-home-mobile.jpg");
 }
 header{
-    width: 100%;
+    width: 90%;
     align-items: center;
+    margin: 0 auto;
 }
 header .header__nav{
     width: 50px;
     height: 50px;
-    margin: 50px;
+    margin-top: 10px;
     background-image: url("/asset/shared/icon-hamburger.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 header picture{
-    width: 70px;
-    height: 70px;
-    margin: 50px;
+    width: 50px;
+    height: 50px;
+    margin-top: 10px;
 }
 header img{
     width: 100%;
@@ -27,4 +28,33 @@ header img{
 }
 .header__nav-items{
     display: none;
+}
+/* Main for the home page */
+.main__home-content{
+  width: 95%;
+  margin: 0 auto;
+}
+.main__home-content__left{
+    align-items: center;
+    margin: 50px  0 50px 0;
+}
+
+.main__home-content__left p:nth-child(1){
+    font-size: 1.6rem; 
+}
+.main__home-content__left p:nth-child(2){
+    font-size: 8rem; 
+}
+.main__home-content__left p:nth-child(3){
+    font-size: 1.3rem; 
+}
+.main__home-content__right{
+    justify-content: center;
+}
+.main__home-content__right  div{
+    width: 150px;
+    height: 150px;
+}
+.main__home-content__right  div p{
+    font-size: 2rem ;
 }
