--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ a{
 }
 header{
     display: flex;
+    justify-content: space-between;
     flex-direction: row;
     padding-top: 40px;
     height: 15vh;
@@ -89,7 +90,7 @@ header .header__nav{
 
 .main__home {
     width: 100%;
-    height: 100vh;
+    height: 90vh;
 }
 .main__home-content{
     display: grid;
@@ -137,6 +138,7 @@ header .header__nav{
     border-radius: 50%;
     display: grid;
     place-content: center;
+    font-family:  'Bellefair', serif; ;
 }
 .main__home-content__right div p {
 
