--- a/css/tablet.css
+++ b/css/tablet.css
@@ -126,3 +126,38 @@ header img{
     margin-right: 50px;
     text-align: center;
 }
+/* Here start the styles for crews */
+.body__crew{
+    background-image: url("/asset/crew/background-crew-tablet.jpg");
+}
+.main__crew{
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin: 0 auto;
+    height: 90vh;
+}
+.main__crew-left{
+    width: 100%;
+    height: 50%;
+    order: 1;
+    place-content: center;
+    display: flex;
+ }
+ .main__crew-right{
+    width: 100%;
+    height: 50%;
+    order: 2;
+}
+.main__crew-left__container{
+    width: 100%;
+}
+
+.main__crew-left__container-info{
+    text-align: center;
+    margin-top: 70px;
+}
+.main__crew-left__container-leyer {
+    justify-content: center;
+    margin-top: 50px;
+}
