I finished the style for technology page (Tablet)

--- a/css/movile.css
+++ b/css/movile.css
@@ -158,3 +158,8 @@ header img{
 .main_crew-specialist{
     height: 35%;
 }
+/* Here start the technology page */
+.body__technology{
+    background-image: url("/asset/technology/background-technology-mobile.jpg");
+
+}
