--- a/css/tablet.css
+++ b/css/tablet.css
@@ -161,3 +161,50 @@ header img{
     justify-content: center;
     margin-top: 50px;
 }
+/* Here start the technology page */
+.body__technology{
+    background-image: url("/asset/technology/background-technology-tablet.jpg");
+}
+.main__technology{
+    height: 90vh;
+    display: grid;
+    justify-items: end;
+}
+
+.main__technology .container{
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+   flex-direction: column;
+}
+.container__title{
+    margin: 40px 0 60px 30px;
+}
+.container__img{
+    order: 1;
+    width: 100%;
+    height: 20%;
+}
+.container__info{
+    order: 2;
+    width: 100%;
+    height: 33%;
+    flex-direction: column;
+    margin-top: 20px;
+}
+.container__info-right{
+    margin: 30px 0  0 0;
+    text-align: center;
+}
+.container__info-right p:nth-child(1){
+    margin-bottom: 20px;
+}
+.container__info-left{
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+.container__info-left li{
+  margin-right: 30px;
+}
