--- a/css/movile.css
+++ b/css/movile.css
@@ -161,5 +161,35 @@ header img{
 /* Here start the technology page */
 .body__technology{
     background-image: url("/asset/technology/background-technology-mobile.jpg");
-
 }
+.container__title{
+    margin: 20px 0 30px 0px;
+    text-align: center;
+    font-size: 1.6rem;
+}
+.container__info{
+    margin-top: 0px;
+}
+.container__info li{
+    width: 40px;
+    height: 40px;
+    font-size: 1.6rem;
+    padding: 10px;
+}
+.container__info-left{
+    margin-top: 20px;
+}
+.container__info-right{
+    margin: 0;
+    width: 90%;
+    margin: 0 auto;
+}
+.container__info-right p:nth-child(2){
+    font-size: 2.4rem;
+    color: var(--Font-color);
+    margin-bottom: 20px;
+}
+.container__info-right p:nth-child(3) br{
+   display: none;
+}
+
