--- a/css/movile.css
+++ b/css/movile.css
@@ -59,6 +59,9 @@ header img{
     font-size: 2rem ;
 }
 /* Here start the destination page */
+.body__destination{
+    background-image: url("https://i.postimg.cc/yYqbNYZ4/background-destination-mobile.jpg");
+}
 .destination__left{
     justify-content: center;
     height: 40%;
@@ -105,7 +108,7 @@ header img{
 /* Here start the styles for crews */
 
 .body__crew{
-    background-image: url("/asset/crew/background-crew-mobile.jpg");
+    background-image: url("https://i.postimg.cc/Dzcsk53Y/background-crew-mobile.jpg");
 }
 .main__crew-left{
     order: 2;
@@ -160,7 +163,7 @@ header img{
 }
 /* Here start the technology page */
 .body__technology{
-    background-image: url("/asset/technology/background-technology-mobile.jpg");
+    background-image: url("https://i.postimg.cc/HLCY4CKf/background-technology-mobile.jpg");
 }
 .container__title{
     margin: 20px 0 30px 0px;
